task/PW-120 - Global fix for scrollbar shifting items

--- a/Personal Website/Website/styles/experience.css
+++ b/Personal Website/Website/styles/experience.css
@@ -1,17 +1,7 @@
 /* General */
-html {
-	width: 100vw;
-	overflow-x: hidden;
-}
-body{
-	width: 100vw;
-	overflow-x: hidden;
-}
 #page {
 	position: absolute;
-	width: 100vw;
 	height: 100%;
-	overflow-x: hidden;
 }
 
 /* Loading Spinner */
